[package]
name = "qbitun"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "cookies", "http2", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

[profile.release]
lto = false
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
overflow-checks = false
